--- a/layouts/episodes/single.html
+++ b/layouts/episodes/single.html
@@ -105,8 +105,7 @@
             {{ $content | safeHTML }}
         </div>
         <button id="readMoreBtn"
-            class="text-orange mx-auto flex mt-[10px] sm:mt-[33px] text-[10px] sm:text-xs md:text-sm lg:text-base relative z-[10]">...czytaj
-            więcej</button>
+            class="text-orange mx-auto flex mt-[10px] sm:mt-[33px] text-[10px] sm:text-xs md:text-sm lg:text-base relative z-[10]">↓ rozwiń transkrypcję</button>
     </div>
     <img class="absolute lg:bottom-[108px] md:bottom-[10px] bottom-[5rem] left-0 w-full h-[69px] sm:h-[300px] lg:h-[300px]"
         src="/images/png/read-bottom-layer.png" alt="read-bottom-layer">
@@ -240,24 +239,30 @@
         absolute top-[55%]
         sm:left-[5%] sm:top-[45%]
          " src="/images/svg/input-arrow.svg" alt="input-arrow-svg">
-            <form id="emailForm" class="flex flex-col gap-14 sm:gap-[93px] mx-auto mb-8 items-center max-w-[500px]">
+            <form id="emailForm" class="flex flex-col gap-14 sm:gap-[93px] mx-auto mb-8 items-center max-w-[500px] relative" action="/api/newsletter" method="POST">
                 <input type="email" id="emailInput" name="email" placeholder="Adres e-mail" required
                     class="flex-1 px-4 py-[6px] border-b-2 border-orange text-dark-black placeholder-grey focus:outline-none focus:border-orange text-xs sm:text-sm md:text-base lg:text-2xl max-w-[237px] sm:max-w-full text-center font-medium w-full" />
                 <div>
-                    <button type="submit" class="bg-orange text-[17.23px] sm:text-2xl text-dark-black uppercase 
-         px-[71.5px] sm:px-[111px] 
-         py-[2.1px] sm:py-[6.5px] 
-         rounded-full font-bold 
-         hover:bg-dark-black hover:text-orange 
+                    <button type="submit" id="newsletter-submit" class="bg-orange text-[17.23px] sm:text-2xl text-dark-black uppercase
+         px-[71.5px] sm:px-[111px]
+         py-[2.1px] sm:py-[6.5px]
+         rounded-full font-bold
+         hover:bg-dark-black hover:text-orange
          transition-all duration-300 ease-linear">
                         Zapisz się
                     </button>
                 </div>
+                <div id="turnstile-container" class="absolute -top-20"></div>
             </form>
+            <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=onloadTurnstileCallback" async defer></script>
             <p id="errorMsg" class="text-red-500 font-medium mt-2 hidden">Wprowadź poprawny adres e-mail.</p>
-            <div id="successMsg" class="px-4 w-full left-[50%] hidden translate-x-[-50%] top-0 absolute ">
+            <div id="successMsg" class="px-4 w-full left-[50%] hidden translate-x-[-50%] top-0 absolute z-50">
                 <div
-                    class="max-w-[1192px] w-full h-[257px] max-[411px]:h-[286px] sm:h-[378px] max-md:px-5 flex flex-col items-center justify-center mx-auto bg-white shadow-[1px_0px_17px_#a884844f] rounded-[30px] md:rounded-[56px] lg:p-[109px_224px_86px_471px]">
+                    class="max-w-[1192px] w-full h-[257px] max-[411px]:h-[286px] sm:h-[378px] max-md:px-5 flex flex-col items-center justify-center mx-auto bg-white shadow-[1px_0px_17px_#a884844f] rounded-[30px] md:rounded-[56px] lg:p-[109px_224px_86px_471px] relative">
+                    <button onclick="document.getElementById('successMsg').classList.add('hidden')"
+                        class="absolute top-4 right-4 text-red hover:text-dark-black transition-colors text-2xl font-bold z-10">
+                        ×
+                    </button>
                     <img class="absolute top-[2%] xl:top-[7px] max-lg:hidden left-[20%] xl:left-[280px] size-[174px]"
                         src="/images/svg/red-flower.svg" alt="">
                     <img class="absolute max-md:top-[10%] md:bottom-[127px] left-[6%] md:left-[20%] lg:left-[230px] size-[40px] md:size-[50px]"
@@ -312,11 +317,11 @@
         if (expanded) {
             textContainer.classList.remove("collapsed");
             fadeOverlay.style.display = "none";
-            btn.innerText = "czytaj mniej";
+            btn.innerHTML = "↑ zwiń transkrypcję";
         } else {
             textContainer.classList.add("collapsed");
             fadeOverlay.style.display = "block";
-            btn.innerText = "...czytaj więcej";
+            btn.innerHTML = "↓ rozwiń transkrypcję";
         }
     });
     const readMoreText = document.getElementById("readMoreText");
