Add z-index to training info sidebar for improved layering

--- a/layouts/training/single.html
+++ b/layouts/training/single.html
@@ -313,9 +313,9 @@
     </div>
     
     <!-- ===== TRAINING INFO SIDEBAR ===== -->
-    <div class="right-0 sticky top-0 h-max w-0 -right-[9%] max-[1399px]:hidden min-[2100px]:!right-[clamp(40px,39vw,16%)] min-[3000px]:!right-[clamp(40px,39vw,26%)] min-[4500px]:!right-[clamp(40px,39vw,34%)] min-[7000px]:!right-[clamp(40px,39vw,42%)]">
+    <div class="right-0 sticky top-0 h-max w-0 -right-[9%] max-[1399px]:hidden min-[2100px]:!right-[clamp(40px,39vw,16%)] min-[3000px]:!right-[clamp(40px,39vw,26%)] min-[4500px]:!right-[clamp(40px,39vw,34%)] min-[7000px]:!right-[clamp(40px,39vw,42%)] z-[999]">
       <div
-        class="p-10 bg-orange h-max flex flex-col  translate-x-[-100%] max-w-[507px] !min-w-[507px] right-0 gap-6 w-full relative z-20 max-lg:hidden">
+        class="p-10 bg-orange h-max flex flex-col  translate-x-[-100%] max-w-[507px] !min-w-[507px] right-0 gap-6 w-full relative z-[100] max-lg:hidden">
         <div class="flex items-start justify-between w-full border-b border-dark-black pb-2.5">
           <div class="flex gap-2 items-center sm:w-full max-w-[140px]">
             <img src="/img/svg/price-icon.svg" alt="price-icon" class="w-[45px] h-[45px] sm:w-7 sm:h-7">
