Refactor anchor tags to remove unnecessary target="_blank" attributes for social links

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -107,8 +107,7 @@
         SUBSKRYBUJ PODCAST
       </h2>
       <div class="flex flex-wrap items-center justify-center xl:gap-[50px] lg:gap-5 gap-7">
-        <a href="{{ .Site.Params.podcast.youtube }}" target="_blank"
-          class="sm:border-2 border-[1.12px] border-solid border-dark-black flex justify-center sm:rounded-[30px] rounded-2xl sm:py-7 py-4 px-9 xl:min-w-[350px] sm:min-w-[300px] min-w-[196px] w-fit group bg-white z-10">
+        <a href="{{ .Site.Params.podcast.youtube }}"          class="sm:border-2 border-[1.12px] border-solid border-dark-black flex justify-center sm:rounded-[30px] rounded-2xl sm:py-7 py-4 px-9 xl:min-w-[350px] sm:min-w-[300px] min-w-[196px] w-fit group bg-white z-10">
           <svg class="max-lg:w-[135px] max-sm:w-[86px] max-sm:h-[23px]" width="152" height="40" viewBox="0 0 177 40"
             fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -120,8 +119,7 @@
               fill="#282828" class="group-hover:fill-black transition-all ease-linear duration-300" />
           </svg>
         </a>
-        <a href="https://open.spotify.com/show/13wiwR1mmHD3PTBcMt9J9J" target="_blank"
-          class="sm:border-2 border-[1.12px] border-solid border-dark-black flex justify-center sm:rounded-[30px] rounded-2xl sm:py-7 py-4 px-9 xl:min-w-[350px] sm:min-w-[300px] min-w-[196px] w-fit group bg-white z-10">
+        <a href="https://open.spotify.com/show/13wiwR1mmHD3PTBcMt9J9J"          class="sm:border-2 border-[1.12px] border-solid border-dark-black flex justify-center sm:rounded-[30px] rounded-2xl sm:py-7 py-4 px-9 xl:min-w-[350px] sm:min-w-[300px] min-w-[196px] w-fit group bg-white z-10">
           <svg class="max-sm:max-w-[99px] max-sm:h-[23px]" width="126" height="40" viewBox="0 0 126 40" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path
@@ -129,8 +127,7 @@
               fill="#1ED760" class="group-hover:fill-black transition-all ease-linear duration-300" />
           </svg>
         </a>
-        <a href="https://podcasts.apple.com/il/podcast/patoarchitekci/id1477067604" target="_blank"
-          class="sm:border-2 border-[1.12px] border-solid border-dark-black flex justify-center sm:rounded-[30px] rounded-2xl sm:py-7 py-4 px-9 xl:min-w-[350px] sm:min-w-[300px] min-w-[196px] w-fit group bg-white z-10">
+        <a href="https://podcasts.apple.com/il/podcast/patoarchitekci/id1477067604"          class="sm:border-2 border-[1.12px] border-solid border-dark-black flex justify-center sm:rounded-[30px] rounded-2xl sm:py-7 py-4 px-9 xl:min-w-[350px] sm:min-w-[300px] min-w-[196px] w-fit group bg-white z-10">
           <svg class="max-sm:w-[120px] sm:max-sm:max-w-[99px] max-sm:h-[23px]" width="214" height="40"
             viewBox="0 0 214 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -185,11 +182,11 @@
           same konkrety. Zawsze z porządną dawką humoru.
         </p>
         <div class="flex gap-2 sm:gap-3 pb-7 pt-3 sm:pt-5 lg:py-9">
-          <a href="{{ .Site.Params.hosts.lukasz.linkedin }}" target="_blank">
+          <a href="{{ .Site.Params.hosts.lukasz.linkedin }}" >
             <img src="{{ .Site.BaseURL }}img/svg/linkedin.svg" alt="linkedin"
               class="size-7 sm:size-11 hover:scale-110 duration-300 transition-all ease-in-out" />
           </a>
-          <a href="{{ .Site.Params.hosts.lukasz.twitter }}" target="_blank">
+          <a href="{{ .Site.Params.hosts.lukasz.twitter }}" >
             <img src="{{ .Site.BaseURL }}img/svg/twitter.svg" alt="twitter"
               class="size-7 sm:size-11 hover:scale-110 duration-300 transition-all ease-in-out" />
           </a>
@@ -208,16 +205,16 @@
           jedyne w swoim rodzaju doświadczenie.
         </p>
         <div class="flex gap-2 sm:gap-3 pt-3 sm:pt-5 lg:pt-9">
-          <a href="{{ .Site.Params.hosts.szymon.linkedin }}" target="_blank">
+          <a href="{{ .Site.Params.hosts.szymon.linkedin }}" >
             <img src="{{ .Site.BaseURL }}img/svg/linkedin.svg" alt="linkedin"
               class="size-7 sm:size-11 hover:scale-110 duration-300 transition-all ease-in-out" />
           </a>
-          <a href="{{ .Site.Params.hosts.szymon.twitter }}" target="_blank">
+          <a href="{{ .Site.Params.hosts.szymon.twitter }}" >
             <img src="{{ .Site.BaseURL }}img/svg/twitter.svg" alt="twitter"
               class="size-7 sm:size-11 hover:scale-110 duration-300 transition-all ease-in-out" />
           </a>
         </div>
-        <a target="_blank" href="{{ .Site.Params.consultation.url }}">
+        <a  href="{{ .Site.Params.consultation.url }}">
           <button
             class="bg-white font-semibold lg:text-xl mt-8 sm:mt-[65px] sm:text-lg text-custom-base leading-100 text-dark-black flex items-center sm:gap-3 gap-2.5 sm:py-[5px] py-[3.75px] sm:ps-[5px] ps-[3.75px] sm:pe-[28px] pe-[18px] rounded-full lg:min-w-[243px] transition-all ease-linear duration-300 group">
             <div
@@ -324,8 +321,7 @@
               Masz problem, który wymaga szybkiego rozwiązania i potrzebujesz
               natychmiastowej pomocy?
             </p>
-            <a href="{{ .Site.Params.consultation.purchaseUrl }}" target="_blank"
-              class="bg-white w-max font-semibold lg:text-xl sm:text-lg text-custom-base leading-100 text-dark-black flex items-center sm:gap-3 gap-2.5 sm:py-[5px] py-[3.75px] sm:ps-[5px] ps-[3.75px] sm:pe-[28px] pe-[18px] rounded-full lg:min-w-[243px] transition-all ease-linear duration-300 group inline-flex">
+            <a href="{{ .Site.Params.consultation.purchaseUrl }}"              class="bg-white w-max font-semibold lg:text-xl sm:text-lg text-custom-base leading-100 text-dark-black flex items-center sm:gap-3 gap-2.5 sm:py-[5px] py-[3.75px] sm:ps-[5px] ps-[3.75px] sm:pe-[28px] pe-[18px] rounded-full lg:min-w-[243px] transition-all ease-linear duration-300 group inline-flex">
               <div
                 class="bg-skyblue sm:size-[36px] size-7 flex justify-center items-center rounded-full group-hover:max-w-[48px] group-hover:w-[48px] transition-all ease-linear duration-300">
                 <img width="23" height="22" src="{{ .Site.BaseURL }}img/svg/arrow-icon.svg"
@@ -352,8 +348,7 @@
               bezpieczeństwie chmury, zapewniając najlepsze rozwiązania dla
               Twojej firmy.
             </p>
-            <a href="{{ .Site.Params.consultation.advisoryUrl }}" target="_blank"
-              class="bg-white w-max font-semibold lg:text-xl sm:text-lg text-custom-base leading-100 text-dark-black flex items-center sm:gap-3 gap-2.5 sm:py-[5px] py-[3.75px] sm:ps-[5px] ps-[3.75px] sm:pe-[28px] pe-[18px] rounded-full lg:min-w-[243px] transition-all ease-linear duration-300 group inline-flex">
+            <a href="{{ .Site.Params.consultation.advisoryUrl }}"              class="bg-white w-max font-semibold lg:text-xl sm:text-lg text-custom-base leading-100 text-dark-black flex items-center sm:gap-3 gap-2.5 sm:py-[5px] py-[3.75px] sm:ps-[5px] ps-[3.75px] sm:pe-[28px] pe-[18px] rounded-full lg:min-w-[243px] transition-all ease-linear duration-300 group inline-flex">
               <div
                 class="bg-pink sm:size-[36px] size-7 flex justify-center items-center rounded-full group-hover:max-w-[48px] group-hover:w-[48px] transition-all ease-linear duration-300">
                 <img width="23" height="22" src="{{ .Site.BaseURL }}img/svg/arrow-icon.svg"
@@ -387,7 +382,7 @@
             Doradzamy, szkolimy i wdrażamy innowacje, które napędzają rozwój
             firm.
           </p>
-          <a target="_blank" href="https://protopia.tech/">
+          <a  href="https://protopia.tech/">
             <button
               class="text-dark-black border-2 border-dark-black rounded-[30px] px-[17px] sm:px-[44.1px] py-[3.5px] sm:py-[4.5px] text-[13.33px] sm:text-base md:text-xl lg:text-2xl font-medium uppercase hidden sm:block hover:bg-dark-black hover:text-white transition-all duration-300 ease-linear">
               Poznaj naszą ofertę
@@ -395,7 +390,7 @@
           </a>
         </div>
       </div>
-      <a target="_blank" href="https://protopia.tech/">
+      <a  href="https://protopia.tech/">
         <button class="text-dark-black border border-dark-black rounded-[30px] px-[21.96px] sm:px-[44.1px] py-[4.9px] sm:py-[5.5px] max-sm:leading-100 text-[13.33px] sm:text-base md:text-xl lg:text-2xl font-medium
         mx-auto flex justify-center items-center 
         uppercase block sm:hidden mt-[30px]">
