--- a/layouts/partials/header-hero.html
+++ b/layouts/partials/header-hero.html
@@ -72,7 +72,7 @@
             <div
                 class="flex flex-col group-hover:opacity-100 opacity-0 transition-all duration-300 gap-[9px] items-center justify-center">
                 {{ with .Site.Params.social.tiktok }}
-                <a target="_blank" href="{{ . }}"
+                <a href="{{ . }}"
                     class="bg-white text-orange hover:text-white hover:bg-dark-black duration-300 transition-all w-[51px] h-[51px] rounded-full flex group items-center justify-center">
                     <svg width="22" height="25" viewBox="0 0 22 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -82,7 +82,7 @@
                 </a>
                 {{ end }}
                 {{ with .Site.Params.social.discord }}
-                <a target="_blank" href="{{ . }}"
+                <a href="{{ . }}"
                     class="bg-white text-orange hover:text-white hover:bg-dark-black duration-300 transition-all w-[51px] h-[51px] rounded-full flex group items-center justify-center">
                     <svg width="31" height="24" viewBox="0 0 31 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -92,7 +92,7 @@
                 </a>
                 {{ end }}
                 {{ with .Site.Params.social.linkedin }}
-                <a target="_blank" href="{{ . }}"
+                <a href="{{ . }}"
                     class="bg-white text-orange hover:text-white hover:bg-dark-black duration-300 transition-all w-[51px] h-[51px] rounded-full flex group items-center justify-center">
                     <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -102,7 +102,7 @@
                 </a>
                 {{ end }}
                 {{ with .Site.Params.social.facebook }}
-                <a target="_blank" href="{{ . }}"
+                <a href="{{ . }}"
                     class="bg-white text-orange hover:text-white hover:bg-dark-black duration-300 transition-all w-[51px] h-[51px] rounded-full flex group items-center justify-center">
                     <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -112,7 +112,7 @@
                 </a>
                 {{ end }}
                 {{ with .Site.Params.social.twitter }}
-                <a target="_blank" href="{{ . }}"
+                <a href="{{ . }}"
                     class="bg-white text-orange hover:text-white hover:bg-dark-black duration-300 transition-all w-[51px] h-[51px] rounded-full flex group items-center justify-center">
                     <svg width="25" height="23" viewBox="0 0 25 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -122,7 +122,7 @@
                 </a>
                 {{ end }}
                 {{ with .Site.Params.social.instagram }}
-                <a target="_blank" href="{{ . }}"
+                <a href="{{ . }}"
                     class="bg-white text-orange hover:text-white hover:bg-dark-black duration-300 transition-all w-[51px] h-[51px] rounded-full flex group items-center justify-center">
                     <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
