--- a/layouts/partials/header-hero.html
+++ b/layouts/partials/header-hero.html
@@ -44,7 +44,7 @@
                 class="fixed top-0 right-0 h-full w-full bg-white transform translate-x-full transition-transform duration-300 ease-in-out flex flex-col gap-6 items-center justify-center lg:static lg:transform-none lg:flex-row lg:h-auto lg:w-auto lg:bg-transparent lg:shadow-none lg:gap-10 lg:max-w-[998px] mx-auto">
                 {{ range .Site.Menus.main }}
                 <li>
-                    <a class="font-semibold text-sm sm:text-xl lg:text-sm leading-100 text-dark-black uppercase py-1.5 px-2.5 hover:bg-dark-black hover:text-white rounded-full transition-all duration-300 ease-linear"
+                    <a class="font-semibold text-sm sm:text-xl lg:text-sm leading-100 text-dark-black uppercase py-4 px-8 lg:py-1.5 lg:px-2.5 hover:bg-dark-black hover:text-white rounded-full transition-all duration-300 ease-linear"
                         href="{{ .URL }}"{{ with .Params.target }} target="{{ . }}"{{ end }}>{{ .Name }}</a>
                 </li>
                 {{ end }}
