--- a/layouts/episodes/list.html
+++ b/layouts/episodes/list.html
@@ -57,7 +57,7 @@
                 <div class="font-normal sm:text-sm text-xs text-white sm:!leading-119 !leading-125 md:mb-[15px] mb-2.5">{{ .Params.intro | truncate 200 | markdownify }}</div>
                 <div class="flex flex-wrap items-center gap-1 lg:mb-[55px] mb-5">
                     {{ range .Params.tags }}
-                    <span class="font-normal text-custom-xs sm:!leading-100 leading-120 text-orange">{{ . }}</span>
+                    <span class="font-normal text-custom-xs sm:!leading-100 leading-120 text-orange">#{{ . }}</span>
                     {{ end }}
                 </div>
                 <a href="{{ .Permalink }}">
