Add error message for phone number validation in contact form

--- a/layouts/contact/single.html
+++ b/layouts/contact/single.html
@@ -64,6 +64,8 @@
                         <input name="phone" id="phone"
                             class="py-[9.25px] px-6 sm:px-[31px] font-bold outline-none max-sm:text-sm leading-100 border border-orange text-orange placeholder:text-orange w-full rounded-[30px]"
                             type="tel" placeholder="Twój telefon (opcjonalnie)">
+                        <p class="text-red text-sm text-start mt-1 hidden" id="error-phone">
+                            Numer telefonu musi mieć co najmniej 9 cyfr.</p>
                     </div>
                 </div>
 
