--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -15,6 +15,7 @@
   {{ else }}
 <script src="{{ .Site.BaseURL }}js/training.js"></script>
   {{ end }}
+<script src="{{ .Site.BaseURL }}js/promo-code.js"></script>
 {{ end }}
 {{ if eq .Type "episodes" }}
   {{ if eq .Layout "single" }}
