--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,6 +2,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} - {{ .Site.Title }}{{ end }}</title>
 
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-P922WNC');</script>
+<!-- End Google Tag Manager -->
+
 <!-- ===== Primary Meta Tags ===== -->
 <meta name="title" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Title }}{{ end }}" />
 <meta name="description" content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.description }}{{ end }}" />
@@ -64,3 +72,6 @@
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css" />
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/root.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+<!-- ===== Cookie Consent ===== -->
+<script src="https://app.easy.tools/cookies/scripts/ed9244c3a950479fa8658838fa15d425.js" type="text/javascript"></script>
